Add route labels/id + Swagger documentation for this routes
