# src/routes/labelRoutes.ts
@@ -2,6 +2,7 @@ import express, { Router } from 'express';
 
 import {  getAllLabels, 
           createLabel,
+          getLabelById,
           updateLabel,
           deleteLabelById
         } from '../controllers/labelControllers';
@@ -11,6 +12,8 @@ const router: Router = express.Router();
 router.post('/create/labels', createLabel);
 
 router.get('/all/labels', getAllLabels);
+
+router.get('/labels/:id', getLabelById);
 
 router.put('/update/labels/:id', updateLabel);
 
